<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- App Global -->
	<string name="app_name">Arbeitszeiterfassung</string>
	<!-- Main -->
	<string name="lbl_start_time">Startzeit:</string>
	<string name="lbl_end_time">Endzeit:</string>
	<string name="cmd_start">Start</string>
	<string name="cmd_end">Ende</string>
	<string name="error_not_saved">Speichervorgang war nicht erfolgreich!</string>
	<!-- Edit -->
	<string name="lbl_pause">Pause:</string>
	<string name="lbl_comment">Kommentar:</string>
	<!-- Auflistung -->
	<string name="col_start">Start</string>
	<string name="col_end">Ende</string>
	<!-- Menu Items -->
	<string name="mnu_list">Auflistung</string>
	<string name="mnu_show">Anzeigen</string>
	<string name="mnu_edit">Bearbeiten</string>
	<string name="mnu_delete">Löschen</string>
	<string name="mnu_save">Speichern</string>
	<string name="mnu_cancel">Abbrechen</string>
	<string name="dlg_delete_title">Löschen ...</string>
	<string name="dlg_delete_message">Wollen Sie den Datensatz wirklich löschen?</string>
	<string name="dlg_delte_delete">Löschen</string>
	<string name="dlg_delete_cancel">Abbrechen</string>

</resources>