<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:labelFor="@+id/txt_start_time"
		android:text="@string/lbl_start_time" />

	<EditText
		android:id="@+id/txt_start_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:enabled="false"
		android:inputType="text" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:labelFor="@+id/txt_end_time"
		android:text="@string/lbl_end_time" />

	<EditText
		android:id="@+id/txt_end_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:enabled="false"
		android:inputType="text" />

	<Button
		android:id="@+id/cmd_start_stop"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/cmd_start" />

</LinearLayout>