<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<TextView
		android:id="@+id/lbl_start_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:labelFor="@+id/txt_start_time"
		android:text="@string/lbl_start_time" />

	<EditText
		android:id="@+id/txt_start_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/lbl_start_time"
		android:ems="10"
		android:inputType="text" >

		<requestFocus />
	</EditText>

	<TextView
		android:id="@+id/lbl_end_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/txt_start_time"
		android:labelFor="@+id/txt_end_time"
		android:text="@string/lbl_end_time" />

	<EditText
		android:id="@+id/txt_end_time"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/lbl_end_time"
		android:ems="10"
		android:inputType="text" />

	<TextView
		android:id="@+id/lbl_pause"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/txt_end_time"
		android:labelFor="@+id/txt_pause"
		android:text="@string/lbl_pause" />

	<EditText
		android:id="@+id/txt_pause"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/lbl_pause"
		android:ems="10"
		android:inputType="number" />

	<TextView
		android:id="@+id/lbl_comment"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/txt_pause"
		android:labelFor="@+id/txt_comment"
		android:text="@string/lbl_comment" />

	<EditText
		android:id="@+id/txt_comment"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/lbl_comment"
		android:ems="10"
		android:gravity="top|left"
		android:inputType="textMultiLine" />

</RelativeLayout>